# NL2OR_agent

./: .gitignore  README.md
docs/: DESIGN.md  README.md  flowchart.md  main_loop_func_calls.md
issues/: README.md
nl2or_agent/: .coverage  .env.example  .gitignore  README.md  main.py  pyproject.toml
nl2or_agent/agents/: __init__.py  nl2or_agent.py
nl2or_agent/data/model_bank/: models.json
nl2or_agent/prompts/: system.prompt.md  system_prompt.md
nl2or_agent/tests/: test_agent.py  test_core_logic.py  test_main.py  test_tools.py
nl2or_agent/tools/: __init__.py  model_library_tool.py  solver_tool.py
